[package]
name = "axum-testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "^0.6", features = ["json", "headers", "macros"] }
bytes = "^1.4"
futures = "^0.3"
http = "^0.2"
reqwest = { version = "^0.11", default-features = false, features = ["json", "multipart", "stream"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
tokio = { version = "1.29.1", features = ["macros", "tracing", "rt", "rt-multi-thread", "net", "sync"] }
tower = { version = "^0.4", features = ["util", "tokio"] }
tower-http = { version = "^0.4", features = ["trace"] }
tracing = "^0.1"
tracing-appender = "^0.2"
tracing-futures = { version = "^0.2", default-features = false, features = ["std-future", "tokio"] }
tracing-subscriber = { version = "^0.3", default-features = false, features = ["ansi", "env-filter", "fmt", "local-time", "time", "tracing"] }

[dev-dependencies]
hyper = { version = "^0.14", features = ["server", "tcp", "runtime", "stream"] }
reqwest = { version = "^0.11", default-features = false, features = ["json", "multipart", "stream"] }
